# lyra-server

./: README.md  pyproject.toml
.github/workflows/: release.yml
lyra/: main.py
lyra/agents/: GenerationAgent.py  constants.py
lyra/api/: dependencies.py
lyra/api/routers/: chat.py  health.py
lyra/cli/: client.py  commands.py  config_cmd.py  daemon.py
lyra/config/: env_vars.py
lyra/context/: manager.py
lyra/knowledge/: apt.py  cargo.py  npm.py  pacman.py  pypi.py  resolver.py  wiki.py
lyra/memory/: semantic.py
lyra/scripts/: install_backend.py
lyra/services/: chat.py
lyra/templates/: lyra.service
lyra/tools/: ecosystem.py  linux.py  packages.py
lyra/util/: dirs.py  profile.py  token_budget.py
